# rxpy_opkit

./: .buildinfo  .gitignore  LICENSE  README.html  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-book.yml  run-tests.yml
_sources/: README.md
_sources/flat_operators/: flat_operators_placeholder.md
_sources/logging/: logging_operators_usage.ipynb
css/: custom.css
examples/basic/: simple_operators.py
flat_operators/: README.html  flat_operators_placeholder.html
logging/: logging_operators_usage.html
missing_operators/: README.html  missing_operators_placeholder.html
notebooks/: _config.yml  _toc.yml  intro.md  references.bib
notebooks/book/: _config.yml  _toc.yml  intro.md  logging_placeholder.md  missing_operators_placeholder.md
notebooks/book/getting_started/: installation.md  quickstart.md
notebooks/book/operators/: overview.md
notebooks/flat_operators/: README.md
notebooks/logging/: README.md  logging_operators_usage.ipynb  logging_operators_usage.py
notebooks/missing_operators/: README.md
notebooks/testing/: README.md  testing_placeholder.md
src/opkit/: __init__.py
src/qrx_widgets/: __init__.py
src/rxpy_declarative/: __init__.py
src/rxpy_opkit/: __init__.py
src/rxpy_opkit/basis/: __init__.py  flat_operator_abc_basis.py
src/rxpy_opkit/logging/: __init__.py
src/rxpy_opkit/logging_ops/: __init__.py  logging_operators.py
src/rxpy_opkit/operators/: __init__.py  debug_operators.py
src/rxpy_opkit/tools/: __init__.py
testing/: README.html  testing_placeholder.html
tests/operators/: test_basic_operators.py
