[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rxpy_opkit"
version = "0.1.0"
description = "Reactive programming toolkit with operational utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "loguru>=0.7.0",
    "reactivex>=4.0.0",
    "pytest>=7.3.1",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "jupyter-book>=0.15.0",
]

